--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "firebase": "^5.7.1",
-    "reboot.css": "^1.0.4",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.4.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
