--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "commit": "npx git-cz"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "firebase": "^5.7.1",
@@ -23,6 +22,7 @@
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
     "babel-eslint": "^10.0.1",
+    "cz-conventional-changelog": "2.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "material-design-icons-iconfont": "^4.0.4",
@@ -53,5 +53,10 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
