--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.7.1",
+    "vee-validate": "^2.2.0",
     "vue": "^2.5.17",
     "vue-instantsearch": "^1.7.0",
     "vue-router": "^3.0.1",
